# SimpleQuantTrade

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  PLAN.md  PRODUCTION_RUNBOOK.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: LEGACY_FIXED_RULE_ARCHIVE.md  PLAN.md  PRODUCTION_RUNBOOK.md  ROADMAP.md
models/bundles/: LATEST
runtime_prod/: state.sqlite
runtime_prod/logs/: data_coverage_binance.json  data_coverage_combined.json  data_coverage_ndax.json
runtime_prod/staging_validation/: control.json  state.sqlite
scripts/: refresh_all_available_data.sh  train_latest_snapshot.sh
src/qtbot/: __init__.py  __main__.py  alerts.py  binance_client.py  cli.py  config.py  control.py  cutover.py  data.py  decision_log.py  env.py  execution.py  kraken_client.py  ledger.py  logging_setup.py  model_bundle.py  ndax_client.py  preflight.py  risk.py  (+7 more)
tests/: _helpers.py  test_alerts.py  test_binance_client.py  test_cli.py  test_cli_handlers.py  test_config.py  test_control.py  test_csv_logs.py  test_cutover.py  test_data.py  test_docker_packaging.py  test_env.py  test_execution.py  test_indicators.py  test_kraken_client.py  test_ledger.py  test_logging_setup.py  test_main_module.py  test_ndax_client.py  test_ndax_client_more.py  test_preflight.py  test_reconciliation.py  test_risk.py  test_runner_helpers.py  test_runner_loop.py  test_signals.py  test_snapshot.py  test_staging.py  test_state.py  test_strategy_engine.py  test_training_attribution.py  test_training_backtest.py  test_training_evaluator.py  test_training_features.py  test_training_folds.py  test_training_promotion.py  test_training_trainer.py  test_universe.py
(+118 files in other folders)
