[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplequanttrade"
version = "0.1.0"
description = "SimpleQuantTrade NDAX CLI trading bot"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SimpleQuantTrade" }]
dependencies = [
  "pyarrow>=14.0.0",
]

[project.scripts]
qtbot = "qtbot.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
